2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>

	* time.d (thread_from_arg) [MULTITHREAD]: fix g++ gcsafety build

2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>

        * xthread.d: use "raw" mutexes for emulating spinlocks on
        architectures with no inline asm versions

2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>

        * spvw_sigcld.d (sigcld_enabled_INCF/DECF): fix counting

2011-05-19  Sam Steingold  <sds@gnu.org>

	* makemake.in (UTILCOMPILE): turn into a make variable and use it
	on win32 and when cross-compiling

2011-05-18  Sam Steingold  <sds@gnu.org>

	simplify UI language code
	* lispbibl.d (ENGLISH, LANGUAGE_STATIC): remove
	(language_english): move to ...
	* spvw_language.d (language_english): ... here
	(language): static enum
	(init_language): simplify, remove gotos
	* spvw_memfile.d (loadmem_from_handle): LANGUAGE_STATIC => !GNU_GETTEXT
	* i18n.d (TEXT) [!GNU_GETTEXT]: return the argument as string

2011-05-18  Sam Steingold  <sds@gnu.org>

	* makemake.in: finish the 2008-05-31 CL_CC_NEED_CCPAUX patch
	by removing the special case of comment5 in UTIL building
	(full): fix the grep REPLACE_ regexp (gnulib replacements)

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c: do not include <ws2tcpip.h> twice
	* modules/rawsock/configure.in: <winsock2.h> is checked by gl_SOCKETLIB;
	add LIBSOCKET to LIBS while checking for functions

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/i18n/configure.in: gl_FUNC_NL_LANGINFO is already called
	by gl_INIT in the top-level config file

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f, modules/clx/new-clx/configure.in:
	* modules/fastcgi/configure.in, modules/regexp/configure.in:
	* modules/rawsock/configure.in, modules/rawsock/rawsock.c:
	* modules/syscalls/configure.in, configure.in, m4/general.m4:
	* m4/rusage.m4: do not check for gnulib files
	* Makefile.devel (GNULIB_CORE): add sys_uio & socketlib (already
	present as dependencies)